--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -72,3 +72,12 @@
     min-height: 250px;
     padding: 8px;
 }
+
+.bg-high-color {
+    background-color: #fc5e08;
+    color: white;
+}
+
+.high-color {
+    color: #fc5e08;
+}
