--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,15 +1,13 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 // Variables
-@import 'variables';
-
+@import "variables";
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
-@import '~admin-lte/dist/css/adminlte.css';
-
+@import "~bootstrap/scss/bootstrap";
+@import "~admin-lte/dist/css/adminlte.css";
+@import "~animate.css/animate.css";
+@import "~aos/dist/aos.css";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
-
-@import 'styles'
+@import "styles";
