--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 @import "~admin-lte/dist/css/adminlte.css";
 @import "~animate.css/animate.css";
 @import "~aos/dist/aos.css";
+@import "~slick-carousel/slick/slick";
+@import "~slick-carousel/slick/slick-theme";
+@import "~aos/dist/aos.css";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
