--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -182,6 +182,15 @@
     .partners-heading button {
         width: auto;
     }
+    .software {
+        font-size: 1.1rem;
+    }
+    .software>div {
+        padding-top: 20px;
+    }
+    .accessories>div {
+        padding-top: 20px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -194,6 +203,12 @@
     }
     .partners-heading button {
         width: auto;
+    }
+    .software>div {
+        padding-top: 40px;
+    }
+    .accessories>div {
+        padding-top: 40px;
     }
 }
 
@@ -215,4 +230,20 @@
     .partners-heading h2 {
         font-size: 3rem;
     }
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
