--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,4 @@
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 @import "styles";
+@import "tabs";
