--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50587,3 +50587,58 @@ readers do not read off random characters that represent icons */
   border-radius: 20px 20px 0 0;
 }
 
+.view {
+  position: relative;
+  overflow: hidden;
+  cursor: default;
+}
+
+.view .mask {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-attachment: fixed;
+}
+
+.view img,
+.view video {
+  position: relative;
+  display: block;
+}
+
+.view video.video-intro {
+  top: 50%;
+  left: 50%;
+  z-index: -100;
+  width: auto;
+  min-width: 100%;
+  height: auto;
+  min-height: 100%;
+  transition: 1s opacity;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.overlay .mask {
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+}
+
+.overlay .mask:hover {
+  opacity: 1;
+}
+
+.zoom img,
+.zoom video {
+  transition: all 0.2s linear;
+}
+
+.zoom:hover img,
+.zoom:hover video {
+  transform: scale(1.1);
+}
+
