--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50642,3 +50642,85 @@ readers do not read off random characters that represent icons */
   transform: scale(1.1);
 }
 
+.banner-section {
+  padding: 30px 0px 30px;
+}
+
+.banner-section img {
+  width: 100%;
+}
+
+.banner-section .left {
+  margin: 0px 5px;
+}
+
+.banner-section .right {
+  margin-left: 15px;
+}
+
+.banner-effect {
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+
+.banner-effect::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  display: block;
+  content: "";
+  width: 0;
+  height: 0;
+  background: rgba(255, 255, 255, 0.2);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+.banner-effect:hover::after {
+  -webkit-animation: circle 0.75s;
+  animation: circle 0.75s;
+}
+
+.banner-effect img {
+  transition: 0.3s ease-in;
+}
+
+.banner-effect:hover img {
+  transform: scale(1.1);
+}
+
+@-webkit-keyframes circle {
+  0% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  100% {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+}
+
+@keyframes circle {
+  0% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  100% {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+}
+
